# notification-service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.local.yml  pyproject.toml  settings.yaml  ТЗ.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 10b0287c9555_initial.py  129f3fe8033a_create_users_and_notifications_tables.py
src/app/: lifespan.py  main.py
src/app/api/v1/: notifications.py  users.py
src/app/core/: config.py  database.py
src/app/dependencies/: channels.py  database.py  repositories.py  services.py
src/app/models/: __init__.py  base.py  notification.py  user.py
src/app/repositories/: __init__.py  base.py  notification.py  user.py
src/app/schemas/: __init__.py  notification.py  user.py
src/app/services/: __init__.py  notification_service.py  user_service.py
src/app/services/channels/: __init__.py  base.py  email.py  sms.py  telegram.py
src/tests/: conftest.py
src/tests/test_services/: test_channels.py  test_notification_service.py  test_user_service.py
