[project]
name = "test-notif"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "celery>=5.5.3",
    "dynaconf>=3.2.12",
    "fastapi>=0.120.4",
    "faststream>=0.6.2",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pre-commit>=4.3.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "redis>=7.0.1",
    "sqlalchemy>=2.0.44",
    "taskiq>=0.11.20",
    "uvicorn>=0.38.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
